--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-asgiref==3.2.3
+asgiref==3.7.2
 blinker==1.4
 certifi==2023.5.7
-chardet==3.0.4
 charset-normalizer==3.1.0
 cryptography==3.4.8
 dbus-python==1.2.18
@@ -16,7 +15,6 @@ httplib2==0.20.2
 idna==3.4
 importlib-metadata==4.6.4
 jeepney==0.7.1
-jmespath==0.9.5
 keyring==23.5.0
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
@@ -24,22 +22,22 @@ lazr.uri==1.0.6
 more-itertools==8.10.0
 oauthlib==3.2.0
 Pillow==9.5.0
-pycodestyle==2.10.0
+psycopg2-binary==2.9.6
 Pygments==2.11.2
 PyGObject==3.42.1
 PyJWT==2.3.0
 pyparsing==2.4.7
 python-apt==2.4.0
-python-dateutil==2.8.2
 python3-openid==3.2.0
-pytz==2019.3
+pytz==2023.3
 PyYAML==5.4.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 SecretStorage==3.3.1
 six==1.16.0
-sqlparse==0.3.0
+sqlparse==0.4.4
 stripe==2.42.0
-urllib3==1.25.7
+typing_extensions==4.6.3
+urllib3==2.0.3
 wadllib==1.3.6
 zipp==1.0.0
