--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ Django==3.0.1
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.8.1
+django-environ==0.10.0
+gunicorn==20.1.0
 httplib2==0.20.2
 idna==3.4
 importlib-metadata==4.6.4
@@ -22,7 +24,9 @@ lazr.uri==1.0.6
 more-itertools==8.10.0
 oauthlib==3.2.0
 Pillow==9.5.0
-psycopg2-binary==2.9.6
+postgres==4.0
+psycopg2-binary==2.9.1
+psycopg2-pool==1.1
 Pygments==2.11.2
 PyGObject==3.42.1
 PyJWT==2.3.0
