--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,18 @@
-asgiref==3.7.2
-blinker==1.4
-certifi==2023.5.7
-charset-normalizer==3.1.0
-cryptography==3.4.8
-dbus-python==1.2.18
-defusedxml==0.7.1
-distro==1.7.0
+asgiref==3.6.0
+cloudinary==1.32.0
 dj-database-url==0.5.0
-Django==3.0.1
-django-allauth==0.41.0
+dj3-cloudinary-storage==0.0.6
+Django==3.2.18
+django-allauth==0.54.0
+django-crispy-forms==1.14.0
 django-countries==7.2.1
-django-crispy-forms==1.8.1
-django-environ==0.10.0
+django-summernote==0.8.20.0
 gunicorn==20.1.0
-httplib2==0.20.2
-idna==3.4
-importlib-metadata==4.6.4
-jeepney==0.7.1
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-more-itertools==8.10.0
-oauthlib==3.2.0
-Pillow==9.5.0
-postgres==4.0
-psycopg2-binary==2.9.1
-psycopg2-pool==1.1
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0
+oauthlib==3.2.2
+psycopg2-binary==2.9.6
+PyJWT==2.6.0
 python3-openid==3.2.0
 pytz==2023.3
-PyYAML==5.4.1
-requests==2.31.0
 requests-oauthlib==1.3.1
-SecretStorage==3.3.1
-six==1.16.0
-sqlparse==0.4.4
+sqlparse==0.4.3
 stripe==2.42.0
-typing_extensions==4.6.3
-urllib3==2.0.3
-wadllib==1.3.6
-zipp==1.0.0
