--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
 asgiref==3.6.0
+boto3==1.26.153
+botocore==1.29.153
 cloudinary==1.32.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.18
 django-allauth==0.54.0
-django-crispy-forms==1.14.0
 django-countries==7.2.1
+django-crispy-forms==1.14.0
+django-storages==1.13.2
 django-summernote==0.8.20.0
 gunicorn==20.1.0
+jmespath==1.0.1
 oauthlib==3.2.2
+Pillow==9.5.0
 psycopg2-binary==2.9.6
 PyJWT==2.6.0
 python3-openid==3.2.0
 pytz==2023.3
 requests-oauthlib==1.3.1
+s3transfer==0.6.1
 sqlparse==0.4.3
 stripe==2.42.0
+urllib3==1.26.16
